--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Next.js
 .next
@@ -40,3 +41,12 @@ coverage
 *.swp
 *.swo
 *~
+
+# Git
+.git
+.gitignore
+
+# Documentation (optional, keep in source but not in container)
+docs/
+README.md
+CHANGELOG.md
